	PR tree-optimization/86492 	* gimple-ssa-store-merging.c 	(imm_store_chain_info::coalesce_immediate_stores): Call 	check_no_overlap even for the merge_overlapping case.  Formatting fix.

* gcc.c-torture/execute/pr86492.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@262576 138bc75d-0d04-0410-961f-82ee72b054a4